2004-03-01  Andrew Pinski  <pinskia@physics.uc.edu>

PR middle-end/13066
        * fold-const (fold): Call fold_convert when building
        a TRUTH_*_EXPR tree.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@78714 138bc75d-0d04-0410-961f-82ee72b054a4